feat: switch to using Room on Game model